Fix body overflow styling to ensure consistent behaviour on mobiles

--- a/src/css/site/_site_base.scss
+++ b/src/css/site/_site_base.scss
@@ -2,6 +2,7 @@
 
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -18,7 +19,7 @@ main {
 body {
 	padding-top: var(--header-height);
 	background-color: var(--background-colour);
-	overflow: auto; // Why is this here???
+	overflow-x: hidden;
 	color: var(--foreground-colour);
 }
 
